@@ -1,3 +1,8 @@
+2016-04-27 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoapCSV.m
+	Detect count() in query and complete progress.
+
 2016-04-19 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
